fix name and integration test command

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jhipster-ignite",
+  "name": "ignite-jhipster",
   "description": "A React Native boilerplate for JHipster apps.",
   "license": "MIT",
   "repository": "ruddell/ignite-jhipster",
