--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "devDependencies": {
     "ava": "^0.18.2",
     "babel-eslint": "^7.1.1",
+    "fs-jetpack": "^0.12.0",
     "np": "^2.12.0",
     "nyc": "^10.1.2",
     "sinon": "^1.17.7",
