move standard to a plugin

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "standard": {
     "parser": "babel-eslint",
     "globals": [
-      "__DEV__"
+      "__DEV__",
+      "describe"
     ]
   },
   "devDependencies": {
