--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   },
   "dependencies": {
     "fs-extra": "4.0.0",
+    "insight": "0.8.4",
     "pluralize": "6.0.0",
     "ramda": "0.23.0"
   }
