--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "babel-eslint": "7.2.3",
     "fs-jetpack": "1.0.0",
     "jest": "21.0.2",
+    "jhipster-core": "1.4.6",
     "np": "2.15.0",
     "sinon": "2.3.1",
     "standard": "10.0.2",
