lint, fix RNN version, fix test

--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
       "jasmine",
       "beforeAll",
       "afterAll"
+    ],
+    "ignore": [
+      "boilerplate/e2e"
     ]
   },
   "devDependencies": {
