--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,35 +1,54 @@
-pool:
-# note: both ios and android emulator is only available on mac-os on azure pipelines
-  vmImage: 'macOS-10.13'
-variables:
-  SCRIPT_DIR: $BUILD_REPOSITORY_LOCALPATH/test/scripts
+jobs:
+- job: Test
+  pool:
+  # note: both ios and android emulator is only available on mac-os on azure pipelines
+    vmImage: 'macOS-10.13'
+  variables:
+    SCRIPT_DIR: $BUILD_REPOSITORY_LOCALPATH/test/scripts
+    JHI_AUTH_TYPE: jwt
+    SPRING_OUTPUT_ANSI_ENABLED: NEVER
+    SPRING_JPA_SHOW_SQL: false
+    JHI_DTO: false
+    JHI_WEBSOCKETS: false
 
-steps:
-- task: NodeTool@0
-  inputs:
-    versionSpec: '10.x'
-  displayName: 'TOOLS: install Node.js'
-- script: npm install -g npm
-  displayName: 'TOOLS: update NPM'
-#- script: $(SCRIPT_DIR)/display-tools.sh
-#  displayName: 'TOOLS: install docker'
-- script: $(SCRIPT_DIR)/display-tools.sh
-  displayName: 'TOOLS: display tools'
-- script: $(SCRIPT_DIR)/install-node-dependencies.sh
-  displayName: 'TOOLS: install node dependencies'
-- script: cp ${BUILD_REPOSITORY_LOCALPATH}/test/.jhipster/application-with-entities.jdl ../mono.jdl
-  displayName: 'TOOLS: npm install and link in ignite-jhipster'
-- script: $(SCRIPT_DIR)/install-detox.sh
-  displayName: 'TOOLS: installing detox CLI '
-- script: npm ci && npm link
-  displayName: 'SETUP: copy the JDL file for the backend and app'
-- script: $(SCRIPT_DIR)/generate-ignite-jhipster-app.sh
-  displayName: 'GENERATING: generating ignite-jhipster app'
-- script: $(SCRIPT_DIR)/package-ignite-jhipster-app.sh
-  displayName: 'PACKAGING: packaging ignite-jhipster app for detox'
-- script: $(SCRIPT_DIR)/generate-jhipster-backend.sh
-  displayName: 'GENERATING: generate jhipster project'
-- script: $(SCRIPT_DIR)/package-jhipster-backend.sh
-  displayName: 'PACKAGING: packaging jhipster project into docker'
-- script: $(SCRIPT_DIR)/run-detox-tests.sh
-  displayName: 'TESTING: running detox tests'
+  strategy:
+    matrix:
+#      jwt:
+#        JHI_AUTH_TYPE: jwt
+#        JHI_DTO: false
+      jwt-dto:
+        JHI_AUTH_TYPE: jwt
+        JHI_DTO: true
+      session:
+        JHI_AUTH_TYPE: session
+        JHI_DTO: false
+#      session-dto:
+#        JHI_AUTH_TYPE: session
+#        JHI_DTO: true
+  steps:
+  - task: NodeTool@0
+    inputs:
+      versionSpec: '10.x'
+    displayName: 'TOOLS: install Node.js'
+  - script: npm install -g npm
+    displayName: 'TOOLS: update NPM'
+  - script: $(SCRIPT_DIR)/install-node-dependencies.sh
+    displayName: 'TOOLS: install node dependencies'
+  - script: $(SCRIPT_DIR)/display-tools.sh
+    displayName: 'TOOLS: display tools'
+  - script: $(SCRIPT_DIR)/copy-jdl-file.sh
+    displayName: 'SETUP: copy the JDL file for the backend and app'
+  - script: $(SCRIPT_DIR)/install-detox.sh
+    displayName: 'TOOLS: installing detox CLI '
+  - script: npm ci && npm link
+    displayName: 'TOOLS: npm install and link in ignite-jhipster'
+  - script: $(SCRIPT_DIR)/generate-ignite-jhipster-app.sh
+    displayName: 'GENERATING: generating ignite-jhipster app'
+  - script: $(SCRIPT_DIR)/package-ignite-jhipster-app.sh
+    displayName: 'PACKAGING: packaging ignite-jhipster app for detox'
+  - script: $(SCRIPT_DIR)/generate-jhipster-backend.sh
+    displayName: 'GENERATING: generate jhipster project'
+  - script: $(SCRIPT_DIR)/package-jhipster-backend.sh
+    displayName: 'PACKAGING: packaging jhipster project into docker'
+  - script: $(SCRIPT_DIR)/run-detox-tests.sh
+    displayName: 'TESTING: running detox tests'
