--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,6 +37,11 @@ jobs:
         JHI_IGNITE_APP_NAME: OauthDtoApp
         JHI_AUTH_TYPE: oauth2
         JHI_DTO: true
+      jwt-websockets:
+        JHI_IGNITE_APP_NAME: JwtWebsocketsApp
+        JHI_AUTH_TYPE: jwt
+        JHI_DTO: false
+        JHI_WEBSOCKETS: true
   steps:
   - task: NodeTool@0
     inputs:
@@ -54,11 +59,14 @@ jobs:
     displayName: 'TOOLS: installing detox CLI '
   - script: npm ci && npm link
     displayName: 'TOOLS: npm install and link in ignite-jhipster'
+  - script: $(SCRIPT_DIR)/generate-jhipster-backend.sh
+    displayName: 'PACKAGING: generate jhipster backend'
   - script: $(SCRIPT_DIR)/generate-ignite-jhipster-app.sh
     displayName: 'GENERATING: generate ignite-jhipster app'
   - script: $(SCRIPT_DIR)/package-ignite-jhipster-app.sh
     displayName: 'PACKAGING: package ignite-jhipster app for detox'
+#  the generated JHipster backend is packaged after generating the app so changes from ignite-jhipster can be packaged
   - script: $(SCRIPT_DIR)/package-jhipster-backend.sh
-    displayName: 'PACKAGING: generate and package jhipster backend'
+    displayName: 'PACKAGING: package jhipster backend'
   - script: $(SCRIPT_DIR)/run-detox-tests.sh
-    displayName: 'TESTING: running detox tests'
+    displayName: 'TESTING: run detox tests'
