--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "insight": "0.10.3",
     "jhipster-core": "4.3.0",
     "pluralize": "8.0.0",
+    "prettier": "1.18.2",
     "ramda": "0.26.1",
     "rimraf": "3.0.0",
     "semver": "6.3.0"
