--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# OSX
-#
 .DS_Store
 npm-debug.log
 npm-debug.log*
@@ -8,12 +6,13 @@ coverage
 yarn.lock
 lerna-debug.log
 node_modules
+.idea/
+*.iml
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
 testgrounds
-
 integration_test
 IntegrationTest*
