--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -3,62 +3,45 @@ on: [push, pull_request]
 jobs:
   generate:
     name: e2e-${{ matrix.app_type }}
-    runs-on: macos-10.15
-    if: "!contains(github.event.head_commit.message, '[ci skip]') && !contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.pull_request.title, '[skip ci]') && !contains(github.event.pull_request.title, '[ci skip]')"
+    container: android
+    runs-on: ubuntu-latest
+#    if: "!contains(github.event.head_commit.message, '[ci skip]') && !contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.pull_request.title, '[skip ci]') && !contains(github.event.pull_request.title, '[ci skip]')"
     timeout-minutes: 60
     strategy:
       fail-fast: false
       matrix:
         node_version: [12.16.1]
         app_type:
-          - JwtApp
-#          - JwtDtoApp
+          - JwtDtoApp
 #          - SessionApp
-          - SessionDtoApp
-#          - OauthApp
-          - OauthDtoApp
-          - JwtWebsocketsApp
+#          - OauthDtoApp
+#          - JwtWebsocketsApp
         include:
-          - app_type: JwtApp
+          - app_type: JwtDtoApp
             auth_type: jwt
-            jhi_dto: false
-#          - app_type: JwtDtoApp
-#            auth_type: jwt
-#            jhi_dto: true
+            jhi_dto: true
 #          - app_type: SessionApp
 #            auth_type: session
 #            jhi_dto: false
-          - app_type: SessionDtoApp
-            auth_type: jwt
-            jhi_dto: true
-#          - app_type: OauthApp
+#          - app_type: OauthDtoApp
 #            auth_type: oauth2
-#            jhi_dto: false
-          - app_type: OauthDtoApp
-            auth_type: oauth2
-            jhi_dto: true
-          - app_type: JwtWebsocketsApp
-            auth_type: jwt
-            jhi_dto: true
-            jhi_websockets: true
+#            jhi_dto: true
+#          - app_type: JwtWebsocketsApp
+#            auth_type: jwt
+#            jhi_dto: true
+#            jhi_websockets: true
     env:
       JHI_IGNITE_APP_NAME: ${{ matrix.app_type }}
       JHI_AUTH_TYPE: ${{ matrix.auth_type }}
       JHI_DTO: ${{ matrix.jhi_dto }}
       JHI_WEBSOCKETS: ${{ matrix.jhi_websockets }}
       SCRIPT_DIR: ./test/scripts
-      PLATFORM: ios
+      PLATFORM: android
     steps:
+      - run: echo $ANDROID_HOME
+      - run: echo $ANDROID_SDK_HOME
+      - run: env | grep ANDROID
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node_version }}
-        # for running pipelines locally with `act`
-        env:
-          RUNNER_TEMP: "/tmp/"
-      - uses: actions/setup-java@v1
-        with:
-          java-version: '11.x'
       - run: git --no-pager log -n 10 --graph --pretty='%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue) <%an>%Creset' --abbrev-commit
         shell: bash
       - name: Config git variables
@@ -66,9 +49,6 @@ jobs:
         shell: bash
       - run: $SCRIPT_DIR/install-node-dependencies.sh
         name: 'TOOLS: install node dependencies'
-        shell: bash
-      - run: $SCRIPT_DIR/install-detox.sh || $SCRIPT_DIR/install-detox.sh
-        name: 'TOOLS: installing Detox and its dependencies'
         shell: bash
       - run: $SCRIPT_DIR/display-tools.sh
         name: 'TOOLS: display tools'
@@ -88,6 +68,9 @@ jobs:
       - run: $SCRIPT_DIR/package-ignite-jhipster-app.sh
         name: 'PACKAGING: package ignite-jhipster app for detox'
         shell: bash
-      - run: $SCRIPT_DIR/run-detox-tests.sh
-        name: 'TESTING: run detox tests'
-        shell: bash
+##        todo upload APK and zip of JHipster backend
+##      - name: Upload APK
+##        uses: actions/upload-artifact@v1
+##        with:
+##          name: app
+##          path: app/build/outputs/apk/debug/app-debug.apk
