--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -4,7 +4,7 @@ jobs:
   generate:
     name: ${{ matrix.auth_type }}
     runs-on: ${{ matrix.os }}
-    if: "!github.event.head_commit || !contains(github.event.head_commit.message, '[ci skip]') && !contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.pull_request.title, '[skip ci]') && !contains(github.event.pull_request.title, '[ci skip]')"
+    if: "false"
     timeout-minutes: 20
     strategy:
       fail-fast: false
