--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -3,7 +3,7 @@ on: [push, pull_request]
 jobs:
   lint:
     runs-on: ${{ matrix.os }}
-    if: "!github.event.head_commit || !contains(github.event.head_commit.message, '[ci skip]') && !contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.pull_request.title, '[skip ci]') && !contains(github.event.pull_request.title, '[ci skip]')"
+    if: "false"
     timeout-minutes: 20
     strategy:
       fail-fast: false
