--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -4,31 +4,31 @@ jobs:
   generate:
     name: e2e-${{ matrix.app_type }}
     runs-on: macos-10.15
-#    if: "!contains(github.event.head_commit.message, '[ci skip]') && !contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.pull_request.title, '[skip ci]') && !contains(github.event.pull_request.title, '[ci skip]')"
+    if: "!contains(github.event.head_commit.message, '[ci skip]') && !contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.pull_request.title, '[skip ci]') && !contains(github.event.pull_request.title, '[ci skip]')"
     timeout-minutes: 60
     strategy:
       fail-fast: false
       matrix:
         node_version: [12.16.1]
         app_type:
-          - JwtDtoApp
-#          - SessionApp
-#          - OauthDtoApp
-#          - JwtWebsocketsApp
+          - JwtApp
+          - SessionDtoApp
+          - OauthApp
+          - JwtWebsocketsApp
         include:
-          - app_type: JwtDtoApp
+          - app_type: JwtApp
             auth_type: jwt
+            jhi_dto: false
+          - app_type: SessionDtoApp
+            auth_type: session
             jhi_dto: true
-#          - app_type: SessionApp
-#            auth_type: session
-#            jhi_dto: false
-#          - app_type: OauthDtoApp
-#            auth_type: oauth2
-#            jhi_dto: true
-#          - app_type: JwtWebsocketsApp
-#            auth_type: jwt
-#            jhi_dto: true
-#            jhi_websockets: true
+          - app_type: OauthApp
+            auth_type: oauth2
+            jhi_dto: false
+          - app_type: JwtWebsocketsApp
+            auth_type: jwt
+            jhi_dto: false
+            jhi_websockets: true
     env:
       JHI_IGNITE_APP_NAME: ${{ matrix.app_type }}
       JHI_AUTH_TYPE: ${{ matrix.auth_type }}
@@ -52,7 +52,7 @@ jobs:
       - run: $SCRIPT_DIR/display-tools.sh
         name: 'TOOLS: display tools'
         shell: bash
-      - run: npm ci && npm link
+      - run: npm link
         name: 'TOOLS: npm install and link in ignite-jhipster'
         shell: bash
       - run: $SCRIPT_DIR/copy-jdl-file.sh
