--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -4,7 +4,7 @@ jobs:
   generate:
     name: e2e-${{ matrix.app_type }}
     runs-on: macos-10.15
-    if: "false"
+    if: "!contains(github.event.head_commit.message, '[ci skip]') && !contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.pull_request.title, '[skip ci]') && !contains(github.event.pull_request.title, '[ci skip]')"
     timeout-minutes: 60
     strategy:
       fail-fast: false
@@ -12,28 +12,16 @@ jobs:
         node_version: [12.16.1]
         app_type:
           - JwtApp
-#          - JwtDtoApp
-#          - SessionApp
           - SessionDtoApp
-#          - OauthApp
           - OauthDtoApp
           - JwtWebsocketsApp
         include:
           - app_type: JwtApp
             auth_type: jwt
             jhi_dto: false
-#          - app_type: JwtDtoApp
-#            auth_type: jwt
-#            jhi_dto: true
-#          - app_type: SessionApp
-#            auth_type: session
-#            jhi_dto: false
           - app_type: SessionDtoApp
             auth_type: jwt
             jhi_dto: true
-#          - app_type: OauthApp
-#            auth_type: oauth2
-#            jhi_dto: false
           - app_type: OauthDtoApp
             auth_type: oauth2
             jhi_dto: true
@@ -73,7 +61,7 @@ jobs:
       - run: $SCRIPT_DIR/display-tools.sh
         name: 'TOOLS: display tools'
         shell: bash
-      - run: npm ci && npm link
+      - run: npm link
         name: 'TOOLS: npm install and link in ignite-jhipster'
         shell: bash
       - run: $SCRIPT_DIR/copy-jdl-file.sh
