attempt to prevent duplicate builds by setting push to only master

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -1,5 +1,9 @@
 name: AuthIntegration
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
 jobs:
   generate:
     name: ${{ matrix.auth_type }}
