--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,15 @@
-.DS_Store
-npm-debug.log
-npm-debug.log*
-coverage
-.nyc_output
-yarn.lock
-lerna-debug.log
 node_modules
-.idea/
+coverage
+.idea
 *.iml
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-testgrounds
-integration_test
-IntegrationTest*
+*.ipr
+*.iws
+atlassian-ide-plugin.xml
+/.project
+test/temp/
+docs
+*debug.log*
+.vscode
+yarn.lock
+.DS_Store
+.jhipster
