--- a/.editorconfig
+++ b/.editorconfig
@@ -1,17 +1,17 @@
-# EditorConfig is awesome: http://EditorConfig.org
-
-# top-most EditorConfig file
+# editorconfig.org
 root = true
 
-# Unix-style newlines with a newline ending every file
 [*]
-end_of_line = lf
-insert_final_newline = true
 indent_style = space
-indent_size = 2
+indent_size = 4
+end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
+insert_final_newline = true
 
+[*.md]
+trim_trailing_whitespace = false
 
-[*.gradle]
-indent_size = 4
+[{package,bower}.json]
+indent_style = space
+indent_size = 2
