--- a/package.json
+++ b/package.json
@@ -1,68 +1,61 @@
 {
-  "name": "ignite-jhipster",
-  "description": "A React Native boilerplate for JHipster apps.",
-  "keywords": [
-    "ignite-boilerplate",
-    "react-native",
-    "jhipster-module"
-  ],
-  "license": "Apache-2.0",
-  "repository": "ruddell/ignite-jhipster",
-  "homepage": "https://github.com/ruddell/ignite-jhipster",
-  "version": "3.6.4",
-  "files": [
-    "boilerplate",
-    "commands",
-    "src",
-    "templates",
-    "boilerplate.js",
-    "plugin.js",
-    "ignite.json",
-    "options.js"
-  ],
-  "author": {
-    "name": "Jon Ruddell",
-    "email": "jonathan.ruddell@gmail.com",
-    "url": "https://github.com/ruddell/ignite-jhipster"
-  },
-  "scripts": {
-    "lint": "eslint ./src ./test ./*.js --ext js",
-    "test": "jest test/*.js --runInBand",
-    "watch": "jest test/*.js --runInBand --watch",
-    "precommit": "lint-staged",
-    "prettier": "prettier --write \"src/**/*.js\" \"test/**/*.js\"  \"**/*.md\"",
-    "coverage": "jest test/*.js --runInBand --coverage"
-  },
-  "devDependencies": {
-    "babel-eslint": "10.1.0",
-    "eslint": "7.18.0",
-    "eslint-config-prettier": "7.2.0",
-    "jest": "26.6.3",
-    "lint-staged": "10.5.3"
-  },
-  "dependencies": {
-    "fs-extra": "9.1.0",
-    "insight": "0.10.3",
-    "jhipster-core": "7.3.4",
-    "pluralize": "8.0.0",
-    "prettier": "2.2.1",
-    "ramda": "0.27.1",
-    "rimraf": "3.0.2",
-    "semver": "7.3.4"
-  },
-  "jest": {
-    "testPathIgnorePatterns": [
-      "node_modules/",
-      "boilerplate/"
-    ]
-  },
-  "lint-staged": {
-    "{,app/**/,src/**/,test/**/}*.{js}": [
-      "prettier --write",
-      "eslint --fix --ext .js"
+    "name": "generator-jhipster-react-native",
+    "version": "0.0.0",
+    "description": "React Native Blueprint for existing JHipster Apps",
+    "keywords": [
+        "yeoman-generator",
+        "jhipster-blueprint"
     ],
-    "{,**/}*.{md}": [
-      "prettier --write"
-    ]
-  }
+    "homepage": "https://github.com/ruddell/generator-jhipster-react-native",
+    "author": {
+        "name": "Jon Ruddell",
+        "email": "jonathan.ruddell@gmail.com",
+        "url": "https://jruddell.com/"
+    },
+    "files": [
+        "generators"
+    ],
+    "main": "generators/app/index.js",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/ruddell/generator-jhipster-react-native.git"
+    },
+    "dependencies": {
+        "chalk": "4.1.0",
+        "generator-jhipster": "6.10.4",
+        "lint-staged": "^10.4.2"
+    },
+    "devDependencies": {
+        "chai": "4.2.0",
+        "ejs-lint": "1.1.0",
+        "eslint": "7.11.0",
+        "eslint-config-airbnb-base": "14.2.0",
+        "eslint-config-prettier": "6.14.0",
+        "eslint-plugin-import": "2.22.1",
+        "eslint-plugin-prettier": "3.1.4",
+        "fs-extra": "9.0.1",
+        "jsdoc": "3.6.6",
+        "mocha": "8.2.0",
+        "prettier": "2.1.2",
+        "sinon": "9.2.0",
+        "yeoman-assert": "3.1.1",
+        "yeoman-test": "3.0.0"
+    },
+    "scripts": {
+        "lint": "eslint .",
+        "prettier": "prettier --write \"{,**/}*.{js,json,md}\"",
+        "lint-fix": "npm run lint -- --fix",
+        "pretest": "npm run lint",
+        "test": "npm run test:unit -- test/*.spec.js",
+        "test:unit": "mocha --timeout 20000 --slow 0 --reporter spec",
+        "jsdoc": "jsdoc --configure jsdoc-conf.json",
+        "release": "git push && git push --tags && npm publish",
+        "release:patch": "npm version patch -a -m \"Update to %s\" && npm run release",
+        "release:minor": "npm version minor -a -m \"Update to %s\" && npm run release",
+        "release:major": "npm version major -a -m \"Update to %s\" && npm run release"
+    },
+    "license": "Apache-2.0",
+    "bugs": {
+        "url": "https://github.com/ruddell/generator-jhipster-react-native/issues"
+    }
 }
