--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,8 +1,18 @@
 version: 2
 updates:
   - package-ecosystem: 'npm'
+    directory: '/'
+    schedule:
+        interval: 'weekly'
+    open-pull-requests-limit: 10
+  - package-ecosystem: 'npm'
     directory: '/boilerplate/'
     schedule:
       interval: 'daily'
     open-pull-requests-limit: 10
     versioning-strategy: increase
+  - package-ecosystem: 'github-actions'
+    directory: '/'
+    schedule:
+        interval: 'weekly'
+    open-pull-requests-limit: 10
