--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "fs-jetpack": "^4.0.0",
         "generator-jhipster": "6.10.4",
         "lint-staged": "^10.4.2",
+        "pluralize": "^8.0.0",
         "shelljs": "^0.8.4"
     },
     "devDependencies": {
