fix tests, pin generator-jhipster to master instead of v6

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "cross-spawn": "^7.0.3",
         "fs-extra": "9.0.1",
         "fs-jetpack": "^4.0.0",
-        "generator-jhipster": "6.10.4",
+        "generator-jhipster": "https://github.com/jhipster/generator-jhipster.git#master",
         "lint-staged": "^10.4.2",
         "pluralize": "^8.0.0",
         "shelljs": "^0.8.4"
