--- a/package.json
+++ b/package.json
@@ -41,24 +41,24 @@
         "chalk": "4.1.0",
         "cross-spawn": "^7.0.3",
         "fs-extra": "9.0.1",
-        "fs-jetpack": "^4.0.0",
+        "fs-jetpack": "^4.0.1",
         "generator-jhipster": "git://github.com/jhipster/generator-jhipster.git#f0031a0e2d207b1af083e6f02daad103b401c60b",
-        "lint-staged": "^10.4.2",
+        "lint-staged": "10.5.1",
         "pluralize": "^8.0.0",
         "shelljs": "^0.8.4"
     },
     "devDependencies": {
         "chai": "4.2.0",
         "ejs-lint": "1.1.0",
-        "eslint": "7.11.0",
-        "eslint-config-airbnb-base": "14.2.0",
-        "eslint-config-prettier": "6.14.0",
+        "eslint": "7.13.0",
+        "eslint-config-airbnb-base": "14.2.1",
+        "eslint-config-prettier": "6.15.0",
         "eslint-plugin-import": "2.22.1",
         "eslint-plugin-prettier": "3.1.4",
         "jsdoc": "3.6.6",
-        "mocha": "8.2.0",
+        "mocha": "8.2.1",
         "prettier": "2.1.2",
-        "sinon": "9.2.0",
+        "sinon": "9.2.1",
         "yeoman-assert": "3.1.1",
         "yeoman-test": "3.0.0"
     }
