--- a/.github/workflows/generator.yml
+++ b/.github/workflows/generator.yml
@@ -5,7 +5,7 @@ on:
       - main
   pull_request:
 jobs:
-  lint:
+  lint-and-test:
     runs-on: ${{ matrix.os }}
     if: "!contains(github.event.head_commit.message, '[ci skip]') && !contains(github.event.head_commit.message, '[skip ci]') && !contains(github.event.pull_request.title, '[skip ci]') && !contains(github.event.pull_request.title, '[ci skip]') && !contains(github.event.ref_type, '[tag]')"
     timeout-minutes: 20
