--- a/package.json
+++ b/package.json
@@ -39,13 +39,13 @@
     },
     "dependencies": {
         "chalk": "4.1.0",
-        "cross-spawn": "^7.0.3",
+        "cross-spawn": "7.0.3",
         "fs-extra": "9.0.1",
-        "fs-jetpack": "^4.0.1",
+        "fs-jetpack": "4.0.1",
         "generator-jhipster": "git://github.com/jhipster/generator-jhipster.git#819d07f1ca349ae6f8710f2a3387030a29964982",
         "lint-staged": "10.5.1",
-        "pluralize": "^8.0.0",
-        "shelljs": "^0.8.4"
+        "pluralize": "8.0.0",
+        "shelljs": "0.8.4"
     },
     "devDependencies": {
         "chai": "4.2.0",
