--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -90,3 +90,8 @@ jobs:
       - run: $SCRIPT_DIR/run-detox-tests.sh
         name: 'TESTING: run detox tests'
         shell: bash
+      - uses: actions/upload-artifact@v2
+        if: failure()
+        with:
+          name: detox-failures-${{ matrix.app_type }}
+          path: ${{ github.workspace }}/.artifacts/**/*
