lots of changes to fix tests
remove fs-jetpack dep
fix e2e tests
use this.fs everywhere possible for consistency
remove .yo-resolve thanks to this.fs
use master branch for node deps

--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -97,3 +97,8 @@ jobs:
       - run: $SCRIPT_DIR/run-detox-tests.sh
         name: 'TESTING: run detox tests'
         shell: bash
+      - uses: actions/upload-artifact@v2
+        if: failure()
+        with:
+            name: detox-failures-${{ matrix.app_type }}
+            path: /Users/runner/work/generator-jhipster-react-native/${{ matrix.app_type }}/.artifacts/**/*
