--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -1,4 +1,4 @@
-name: Android-E2E
+name: App Tests
 on:
   push:
     branches:
@@ -16,52 +16,44 @@ jobs:
         node_version: [12.16.1]
         app_type:
           - SessionDtoApp
-          - OauthApp
-          # - JwtWebsocketsApp
+          - OauthDtoApp
+          - JwtWebsocketsApp
         include:
           - app_type: SessionDtoApp
             auth_type: session
             jhi_dto: true
-          - app_type: OauthApp
+          - app_type: OauthDtoApp
             auth_type: oauth2
+            jhi_dto: true
+          - app_type: JwtWebsocketsApp
+            auth_type: jwt
             jhi_dto: false
-          # - app_type: JwtWebsocketsApp
-          #   auth_type: jwt
-          #   jhi_dto: true
-          #   jhi_websockets: true
+            jhi_websockets: true
     env:
       JHI_REACT_NATIVE_APP_NAME: ${{ matrix.app_type }}
       JHI_AUTH_TYPE: ${{ matrix.auth_type }}
       JHI_DTO: ${{ matrix.jhi_dto }}
       JHI_WEBSOCKETS: ${{ matrix.jhi_websockets }}
       SCRIPT_DIR: ./test/scripts
-      PLATFORM: android
-      CP_HOME_DIR: ~/.cocoapods
+      PLATFORM: ios
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2.1.2
+        with:
+          node-version: ${{ matrix.node_version }}
+        # for running pipelines locally with `act`
+        env:
+          RUNNER_TEMP: "/tmp/"
       - run: git --no-pager log -n 10 --graph --pretty='%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue) <%an>%Creset' --abbrev-commit
         shell: bash
       - uses: actions/setup-node@v2.1.2
         with:
             node-version: ${{ matrix.node_version }}
-      - name: Cache Cocoapods
-        uses: actions/cache@v2.1.3
-        with:
-          path: ~/.cocoapods
-          key: ${{ runner.os }}-pods-${{ hashFiles('**/Podfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-pods-
       - name: Config git variables
         run: $SCRIPT_DIR/git-config.sh
         shell: bash
       - run: $SCRIPT_DIR/install-node-dependencies.sh
         name: 'TOOLS: install node dependencies'
-        shell: bash
-      - run: $SCRIPT_DIR/install-detox.sh || $SCRIPT_DIR/install-detox.sh
-        name: 'TOOLS: installing Detox and its dependencies'
-        shell: bash
-      - run: $SCRIPT_DIR/display-tools.sh
-        name: 'TOOLS: display tools'
         shell: bash
       - run: npm i && npm link
         name: 'TOOLS: npm install and link in generator-jhipster-react-native'
@@ -69,20 +61,9 @@ jobs:
       - run: $SCRIPT_DIR/copy-jdl-file.sh
         name: 'SETUP: copy the JDL file for the backend and app'
         shell: bash
-      - run: $SCRIPT_DIR/generate-jhipster-backend.sh
-        name: 'GENERATING: generate jhipster backend'
-        shell: bash
       - run: $SCRIPT_DIR/generate-react-native-app.sh
         name: 'GENERATING: generate react-native app'
         shell: bash
-      - run: $SCRIPT_DIR/package-react-native-app.sh
-        name: 'PACKAGING: package react-native app for detox'
+      - run: $SCRIPT_DIR/run-react-native-tests.sh
+        name: 'TESTING: npm run test'
         shell: bash
-      - run: $SCRIPT_DIR/run-detox-tests.sh
-        name: 'TESTING: run detox tests'
-        shell: bash
-      - uses: actions/upload-artifact@v2
-        if: failure()
-        with:
-            name: detox-failures-${{ matrix.app_type }}
-            path: /Users/runner/work/generator-jhipster-react-native/${{ matrix.app_type }}/.artifacts/**/*
