--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
         "chalk": "4.1.0",
         "cross-spawn": "7.0.3",
         "fs-extra": "9.0.1",
-        "fs-jetpack": "4.0.1",
         "generator-jhipster": "git://github.com/jhipster/generator-jhipster.git#819d07f1ca349ae6f8710f2a3387030a29964982",
         "lint-staged": "10.5.1",
         "pluralize": "8.0.0",
@@ -59,6 +58,7 @@
         "mocha": "8.2.1",
         "prettier": "2.1.2",
         "sinon": "9.2.1",
+        "through2": "^4.0.2",
         "yeoman-assert": "3.1.1",
         "yeoman-test": "3.0.0"
     }
